Внес правки согласно замечаний наставника

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -75,111 +75,100 @@
           <li class="continents__item">Острова</li>
         </ul>
       </div>
-      <table class="countries-filter__table">
-        <caption class="countries-filter__title">Выберите страну</caption>
-        <tr class="countries-filter__row">
-          <td class="countries-filter__cell">
+      <div class="alphabet">
+        <ul class="alphabet__list">
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">А</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Б</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">В</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Г</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Д</a>
-          </td>
-        </tr>
-        <tr class="countries-filter__row">
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Е</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Ё</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Ж</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">З</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">И</a>
-          </td>
-        </tr>
-        <tr class="countries-filter__row">
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Й</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">К</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Л</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">М</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Н</a>
-          </td>
-        </tr>
-        <tr class="countries-filter__row">
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">О</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">П</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Р</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">С</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Т</a>
-          </td>
-        </tr>
-        <tr class="countries-filter__row">
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">У</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Ф</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Х</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Ц</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Ч</a>
-          </td>
-        </tr>
-        <tr class="countries-filter__row">
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Ш</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Щ</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Э</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Ю</a>
-          </td>
-          <td class="countries-filter__cell">
+          </li>
+          <li class="alphabet__item">
             <a class="countries-filter__link" href="#">Я</a>
-          </td>
-        </tr>
-      </table>
+          </li>
+        </ul>
+      </div>
       <ul class="countries-filter__list">
         <li class="countries-filter__item">Австралия</li>
         <li class="countries-filter__item">Австрия</li>
@@ -198,11 +187,10 @@
     <section>
       <h2 class="visually-hidden">Форма поиска попутчика</h2>
       <form class="companion-selection" action="https://echo.htmlacademy.ru" method="post">
-        <fieldset class="companion-selection__content">
-          <legend class="companion-selection__title">
+          <h3 class="companion-selection__title">
             Подберите идеального попутчика
-          </legend>
-          <div class="companion-selection__filter">
+          </h3>
+          <fieldset class="companion-selection__filter">
             <button class="companion-selection__button" type="button">Хобби</button>
             <ul class="companion-selection__list">
               <li class="companion-selection__item">
@@ -218,8 +206,8 @@
                 <label for="sofa">Диван</label>
               </li>
             </ul>
-          </div>
-          <div class="companion-selection__filter">
+          </fieldset>
+          <fieldset class="companion-selection__filter">
             <button class="companion-selection__button" type="button">Музыка</button>
             <ul class="companion-selection__list companion-selection__list--show">
               <li class="companion-selection__item">
@@ -235,8 +223,8 @@
                 <label for="euro-dance">Евроденс</label>
               </li>
             </ul>
-          </div>
-          <div class="companion-selection__filter">
+          </fieldset>
+          <fieldset class="companion-selection__filter">
             <button class="companion-selection__button" type="button">Еда</button>
             <ul class="companion-selection__list">
               <li class="companion-selection__item">
@@ -252,8 +240,8 @@
                 <label for="vegan">Веган-сыроед</label>
               </li>
             </ul>
-          </div>
-          <div class="companion-selection__filter">
+          </fieldset>
+          <fieldset class="companion-selection__filter">
             <button class="companion-selection__button" type="button">Транспорт</button>
             <ul class="transport-list">
               <li class="transport-list__item transport-list__item--active">
@@ -281,8 +269,8 @@
                 </label>
               </li>
             </ul>
-          </div>
-          <div class="companion-selection__filter">
+          </fieldset>
+          <fieldset class="companion-selection__filter">
             <button class="companion-selection__button" type="button">Левел</button>
             <div class="level-filter">
               <div class="level-filter__range-controls">
@@ -302,9 +290,8 @@
                 </label>
               </div>
             </div>
-          </div>
+          </fieldset>
           <button class="companion-selection companion-selection--submit" type="submit">Показать</button>
-        </fieldset>
       </form>
     </section>
     <section class="filtered">
@@ -357,27 +344,15 @@
             <ul class="transport-list">
               <li class="transport-list__item transport-list__item--active">
                 <img src="#" alt="Самолет">
-                <label aria-label="Самолет">
-                  <input class="visually-hidden" type="checkbox" name="transport" value="Самолет" checked>
-                </label>
               </li>
               <li class="transport-list__item transport-list__item--active">
                 <img src="#" alt="Автобус">
-                <label aria-label="Автобус">
-                  <input class="visually-hidden" type="checkbox" name="transport" value="Автобус">
-                </label>
               </li>
               <li class="transport-list__item">
                 <img src="#" alt="Велосипед">
-                <label aria-label="Велосипед">
-                  <input class="visually-hidden" type="checkbox" name="transport" value="Велосипед">
-                </label>
               </li>
               <li class="transport-list__item transport-list__item--active">
                 <img src="#" alt="Бег">
-                <label aria-label="Бег">
-                  <input class="visually-hidden" type="checkbox" name="transport" value="Бег">
-                </label>
               </li>
             </ul>
             <div class="user-card__score-container">
@@ -427,27 +402,15 @@
 
               <li class="transport-list__item transport-list__item--active">
                 <img src="#" alt="Самолет">
-                <label aria-label="Самолет">
-                  <input class="visually-hidden" type="checkbox" name="transport" value="Самолет" checked>
-                </label>
               </li>
               <li class="transport-list__item transport-list__item--active">
                 <img src="#" alt="Автобус">
-                <label aria-label="Автобус">
-                  <input class="visually-hidden" type="checkbox" name="transport" value="Автобус" checked>
-                </label>
               </li>
               <li class="transport-list__item">
                 <img src="#" alt="Велосипед">
-                <label aria-label="Велосипед">
-                  <input class="visually-hidden" type="checkbox" name="transport" value="Велосипед">
-                </label>
               </li>
               <li class="transport-list__item transport-list__item--active">
                 <img src="#" alt="Бег">
-                <label aria-label="Бег">
-                  <input class="visually-hidden" type="checkbox" name="transport" value="Бег" checked>
-                </label>
               </li>
             </ul>
             <div class="user-card__score-container">
@@ -500,27 +463,15 @@
             <ul class="transport-list">
               <li class="transport-list__item transport-list__item--active">
                 <img src="#" alt="Самолет">
-                <label aria-label="Самолет">
-                  <input class="visually-hidden" type="checkbox" name="transport" value="Самолет" checked>
-                </label>
               </li>
               <li class="transport-list__item transport-list__item--active">
                 <img src="#" alt="Автобус">
-                <label aria-label="Автобус">
-                  <input class="visually-hidden" type="checkbox" name="transport" value="Автобус">
-                </label>
               </li>
               <li class="transport-list__item">
                 <img src="#" alt="Велосипед">
-                <label aria-label="Велосипед">
-                  <input class="visually-hidden" type="checkbox" name="transport" value="Велосипед" checked>
-                </label>
               </li>
               <li class="transport-list__item transport-list__item--active">
                 <img src="#" alt="Бег">
-                <label aria-label="Бег">
-                  <input class="visually-hidden" type="checkbox" name="transport" value="Бег">
-                </label>
               </li>
             </ul>
             <div class="user-card__score-container">
@@ -567,27 +518,15 @@
 
               <li class="transport-list__item transport-list__item--active">
                 <img src="#" alt="Самолет">
-                <label aria-label="Самолет">
-                  <input class="visually-hidden" type="checkbox" name="transport" value="Самолет" checked>
-                </label>
               </li>
               <li class="transport-list__item transport-list__item--active">
                 <img src="#" alt="Автобус">
-                <label aria-label="Автобус">
-                  <input class="visually-hidden" type="checkbox" name="transport" value="Автобус" checked>
-                </label>
               </li>
               <li class="transport-list__item">
                 <img src="#" alt="Велосипед">
-                <label aria-label="Велосипед">
-                  <input class="visually-hidden" type="checkbox" name="transport" value="Велосипед">
-                </label>
               </li>
               <li class="transport-list__item transport-list__item--active">
                 <img src="#" alt="Бег">
-                <label aria-label="Бег">
-                  <input class="visually-hidden" type="checkbox" name="transport" value="Бег">
-                </label>
               </li>
             </ul>
             <div class="user-card__score-container">
