Внес правки по рекомендации наставника

--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -7,12 +7,12 @@
   <title>HTML Academy: Погнали</title>
 </head>
 
-<body class="page__body">
+<body class="page-body">
   <header class="page-header">
     <a class="page-header__logo link-reset">
       <img class="page-header__image" src="img/logo_mobile.png" alt="Погнали" width="96" height="15">
     </a>
-    <button class="main-nav__open-menu-button button-reset" type="button">
+    <button class="page-header__open-menu-button button-reset" type="button">
       <img src="img/icon_menu_mobile.svg" alt="Открыть меню" width="25" height="11">
       <span class="visually-hidden">Открыть меню</span>
     </button>
@@ -72,9 +72,9 @@
       </ul>
     </div>
   </header>
-  <main class="page__main">
+  <main class="main">
     <section class="intro">
-      <h1 class="page__title">
+      <h1 class="page-body__title">
         В путешествие с крутыми попутчиками!
       </h1>
       <div>
@@ -139,7 +139,7 @@
       <h2 class="directions__title">
         Направления
       </h2>
-      <p class="direction__text">
+      <p class="directions__text">
         Мы не продаем туры и ничего не рекламируем. Люди сами пишут о странах, куда хотели бы отправиться и чем можно
         там заняться.
       </p>
@@ -364,7 +364,7 @@
         </a>
       </div>
       <div class="business-rates">
-        <h2 class="business__title">
+        <h2 class="business-rates__title">
           Бизнес-тарифы
         </h2>
         <ul class="business-rates__list list-reset">
@@ -462,7 +462,6 @@
             </a>
           </li>
         </ul>
-
       </div>
       <div class="page-footer__developers">
         <p>Разработано</p>
