--- a/source/index.html
+++ b/source/index.html
@@ -93,7 +93,7 @@
           </li>
         </ul>
         <div class="authorization">
-          <a class="button button--authorization link-reset">Авторизация</a>
+          <a class="button button--authorization button--autorization-smaller link-reset">Авторизация</a>
         </div>
       </div>
       <figure class="quote">
@@ -220,7 +220,7 @@
                   <img src="img/flag-seychelles.png" alt="Флаг Сейшелы" width="35" height="25">
                 </li>
               </ul>
-              <div class="user-card__user-status user-card__user-status--offline"><span class="visually-hidden">Статус пользователя</span></div>
+              <div class="user-card__user-status user-card__user-status--offline"><span class="visually-hidden">Статус пользователя: офлайн</span></div>
               <p class="user-card__user-name">Таня Фирсова</p>
               <ul class="tag-list list-reset">
                 <li class="tag-list__item">
@@ -286,7 +286,7 @@
                   <img src="img/flag-czech.png" alt="Флаг Бельгии" width="35" height="24">
                 </li>
               </ul>
-              <div class="user-card__user-status user-card__user-status--online"><span class="visually-hidden">Статус пользователя</span></div>
+              <div class="user-card__user-status user-card__user-status--online"><span class="visually-hidden">Статус пользователя: онлайн</span></div>
               <p class="user-card__user-name">Петя Демин</p>
               <ul class="tag-list list-reset">
                 <li class="tag-list__item">
