--- a/source/index.html
+++ b/source/index.html
@@ -77,7 +77,7 @@
       <h1 class="page-body__title">
         В путешествие с крутыми попутчиками!
       </h1>
-      <div>
+      <div class="page-body__contacts">
         <ul class="contact-list list-reset">
           <li class="contact-list__item">
             <a class="link-reset" href="tel:88005558628">
@@ -204,8 +204,8 @@
       <ul class="companions__list list-reset">
         <li class="companions__item">
           <div class="user-card">
-            <div class="user-card__score-container">
-              <span class="user-card__score">99</span>level
+            <div class="user-score">
+              <span class="user-score__score">99</span>level
             </div>
             <img class="user-card__image" src="img/user-photo-tanya.png" alt="Таня Фирсова" width="270" height="270">
             <div class="user-card__content">
@@ -273,8 +273,8 @@
         </li>
         <li class="companions__item">
           <div class="user-card">
-            <div class="user-card__score-container">
-              <span class="user-card__score">80</span>level
+            <div class="user-score">
+              <span class="user-score__score">80</span>level
             </div>
             <img class="user-card__image" src="img/user-photo-petya.png" alt="Петя Демин" width="270" height="270">
             <div class="user-card__content">
@@ -307,25 +307,25 @@
               </ul>
               <ul class="transport-list list-reset">
                 <li class="transport-list__item transport-list__item--active">
-                  <img src="img/icon_plane.svg" alt="Самолет" width="21" height="23">
+                  <img src="img/icon_plane.svg" alt="Самолет" width="33" height="33">
                   <label aria-label="Самолет">
                     <input class="visually-hidden" type="checkbox" name="transport" value="Самолет" checked>
                   </label>
                 </li>
                 <li class="transport-list__item transport-list__item--active">
-                  <img src="img/icon_bus.svg" alt="Автобус" width="18" height="21">
+                  <img src="img/icon_bus.svg" alt="Автобус" width="33" height="33">
                   <label aria-label="Автобус">
                     <input class="visually-hidden" type="checkbox" name="transport" value="Автобус" checked>
                   </label>
                 </li>
                 <li class="transport-list__item">
-                  <img src="img/icon_bicycle.svg" alt="Велосипед" width="25" height="24">
+                  <img src="img/icon_bicycle.svg" alt="Велосипед" width="33" height="33">
                   <label aria-label="Велосипед">
                     <input class="visually-hidden" type="checkbox" name="transport" value="Велосипед">
                   </label>
                 </li>
                 <li class="transport-list__item transport-list__item--active">
-                  <img src="img/icon_run.svg" alt="Бег" width="21" height="24">
+                  <img src="img/icon_run.svg" alt="Бег" width="33" height="33">
                   <label aria-label="Бег">
                     <input class="visually-hidden" type="checkbox" name="transport" value="Бег" checked>
                   </label>
