Исправил ошибку в имени изображения

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -325,7 +325,7 @@
                 <img class="user-card__image" src="img/user-photo-tanya-circle.png" alt="Таня Фирсова" width="70"
                   height="70">
                 <div class="user-card__likes">
-                  <img class="user-card__heart" src="img/like button.svg" alt="Лайк" width="31" height="32">
+                  <img class="user-card__heart" src="img/like-button.svg" alt="Лайк" width="31" height="32">
                   <span class="user-card__likes-quantity">1.5 М</span>
                 </div>
               </div>
@@ -397,7 +397,7 @@
                 <img class="user-card__image" src="img/user-photo-petya-circle.png" alt="Петя Демин" width="70"
                   height="70">
                 <div class="user-card__likes">
-                  <img class="user-card__heart" src="img/like button.svg" alt="Лайк" width="31" height="32">
+                  <img class="user-card__heart" src="img/like-button.svg" alt="Лайк" width="31" height="32">
                   <span class="user-card__likes-quantity">1500</span>
                 </div>
               </div>
@@ -462,7 +462,7 @@
                 <img class="user-card__image" src="img/user-photo-mark-circle.png" alt="Марк Смолов" width="70"
                   height="70">
                 <div class="user-card__likes">
-                  <img class="user-card__heart" src="img/like button.svg" alt="Лайк" width="31" height="32">
+                  <img class="user-card__heart" src="img/like-button.svg" alt="Лайк" width="31" height="32">
                   <span class="user-card__likes-quantity">170</span>
                 </div>
               </div>
@@ -531,7 +531,7 @@
                 <img class="user-card__image" src="img/user-photo-larysa-circle.png" alt="Лариса Роговая" width="70"
                   height="70">
                 <div class="user-card__likes">
-                  <img class="user-card__heart" src="img/like button.svg" alt="Лайк" width="31" height="32">
+                  <img class="user-card__heart" src="img/like-button.svg" alt="Лайк" width="31" height="32">
                   <span class="user-card__likes-quantity">23</span>
                 </div>
               </div>
