--- a/source/index.html
+++ b/source/index.html
@@ -125,7 +125,7 @@
       </ol>
     </section>
     <section class="about">
-      <h2 class="about__title">О сервисе</h2>
+      <h2 class="page-body__section-title">О сервисе</h2>
       <p>
         Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и
         черпайте вдохновение в чужих.
@@ -137,7 +137,7 @@
       </p>
     </section>
     <section class="directions">
-      <h2 class="directions__title">
+      <h2 class="page-body__section-title">
         Направления
       </h2>
       <p class="directions__text">
@@ -190,7 +190,7 @@
       </a>
     </section>
     <section class="companions">
-      <h2 class="companions__title">
+      <h2 class="page-body__section-title">
         Попутчики
       </h2>
       <p class="companions__text">
