Внес правки по замечаниям наставника

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -589,25 +589,25 @@
         </li>
       </ul>
       <a class="filtered__show-more-button link-reset" href="catalog.html"><span>&#x2b;</span> Показать еще</a>
-      <div class="pagination">
-        <ul class="pagination__button-list list-reset">
-          <li class="pagination__button pagination__button--previous">
+      <div class="filtered__pagination">
+        <ul class="filtered__button-list list-reset">
+          <li class="filtered__button filtered__button--previous">
             <a class="link-reset" href="#" title="Предыдущий">
               &#x25C0;
             </a>
           </li>
-          <li class="pagination__button pagination__button--next">
+          <li class="filtered__button filtered__button--next">
             <a class="link-reset" href="#" title="Следующий">
               &#x25B6;
             </a>
           </li>
         </ul>
-        <ul class="pagination__breadcrumbs pagination__breadcrumbs--hide list-reset">
-          <li class="pagination__item pagination__item--active"><a class="pagination__link link-reset" href="#">1</a>
+        <ul class="filtered__breadcrumbs filtered__breadcrumbs--hide list-reset">
+          <li class="filtered__breadcrumb filtered__breadcrumb"><a class="filtered__link filtered__link--active link-reset" href="#">1</a>
           </li>
-          <li class="pagination__item"><a class="pagination__link link-reset" href="#">2</a></li>
-          <li class="pagination__item"><a class="pagination__link link-reset" href="#">3</a></li>
-          <li class="pagination__item"><a class="pagination__link link-reset" href="#">4</a></li>
+          <li class="filtered__breadcrumb"><a class="filtered__link link-reset" href="#">2</a></li>
+          <li class="filtered__breadcrumb"><a class="filtered__link link-reset" href="#">3</a></li>
+          <li class="filtered__breadcrumb"><a class="filtered__link link-reset" href="#">4</a></li>
         </ul>
       </div>
     </section>
