--- a/source/form.html
+++ b/source/form.html
@@ -148,14 +148,14 @@
       <h2 class="planner__title">Добавить план:</h2>
       <div class="pagination">
         <ul class="pagination-list list-reset">
-          <li class="pagination__item pagination__item--directions-plan">
-            <a class="pagination-list__link pagination__link--directions-plan" href="#"><span class="visually-hidden">slide-1</span></a>
+          <li class="pagination__item">
+            <a class="pagination-list__link" href="#"><span class="visually-hidden">slide-1</span></a>
           </li>
-          <li class="pagination__item pagination__item--directions-plan">
-            <a class="pagination-list__link pagination__link--directions-plan" href="#"><span class="visually-hidden">slide-2</span></a>
+          <li class="pagination__item">
+            <a class="pagination-list__link" href="#"><span class="visually-hidden">slide-2</span></a>
           </li>
-          <li class="pagination__item pagination__item--directions-plan">
-            <a class="pagination__link pagination__link--directions-plan" href="#"><span class="visually-hidden">slide-3</span></a>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#"><span class="visually-hidden">slide-3</span></a>
           </li>
         </ul>
       </div>
